src/01-app/04-app4/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-monitor-app4-ns
  labels:
    name: g-monitor-app4-ns
    app: g-monitor-app4-app
    project: g-monitor-project
