src/01-app/04-app4/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-monitor-app4-service
  namespace: g-monitor-app4-ns
  labels:
    name: g-monitor-app4-service
    app: g-monitor-app4-app
    project: g-monitor-project
spec:
  ports:
    - name: my-http-service
      port: 8181
      targetPort: 8181
  selector:
    name: g-monitor-app4-deployment
