src/01-app/04-app4/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: g-monitor-app4-route
  namespace: g-monitor-app4-ns
  labels:
    name: g-monitor-app4-route
    app: g-monitor-app4-app
    project: g-monitor-project
spec:
  path: /microprofile-crm
  to:
    kind: Service
    name: g-monitor-app4-service
    weight: 100
  port:
    targetPort: my-http-service
